fix(identity): keep callback decoding compatible with Android 8