@@ -1,5 +1,6 @@
 package com.khaoskrew.nexuscompanion.identity;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -126,6 +127,10 @@ public final class AuthCallback {
     }
 
     private static String decode(String value) {
-        return URLDecoder.decode(value, StandardCharsets.UTF_8);
+        try {
+            return URLDecoder.decode(value, StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException impossible) {
+            throw new IllegalStateException("UTF-8 is unavailable", impossible);
+        }
     }
 }
